--- a/packages/sutpc-site/sutpc-sites/popup.html
+++ b/packages/sutpc-site/sutpc-sites/popup.html
@@ -15,6 +15,11 @@
 			padding-bottom: 10px;
 		}
 
+		.work a {
+			margin-left: 18px;
+			margin-bottom: 8px;
+		}
+
 		.left {
 			width: 100px;
 		}
